pthread: have pthread_setschedparam return 0 on success.

* fixes #13299.